<resources>
    <string name="app_name">My Apppetshopping</string>

    <string name="title_activity_envios">Envios</string>

    <string name="title_activity_registro">Registro</string>

    <string name="title_activity_nosotros">Nosotros</string>
    <!-- Strings related to registro_clientes -->
    <string name="title_activity_registroclientes">Registroclientes</string>
    <string name="Nombre">Nombre</string>
    <string name="Correo">Correo</string>
    <string name="Apellido">Apellido</string>
    <string name="Celular">Celular</string>
    <string name="Coopetativa">Cooperativa</string>
    <string name="contraseña">contraseña</string>
    <string name="Ubicación">Ubicación</string>
    <!-- Strings related to login -->
    <string name="title_activity_usuariologin">Usuariologin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">Password must be >8characters</string>
    <string name="login_failed">"Contraseña invalida"</string>
    <string name="Login">Iniciar sesion</string>
    <string name="title_activity_ingresousuario">Ingresousuario</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>